--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<div id="header"> <center> 
-				<img src="images/LogoTI.jpeg"</span> 	<hr width="100%" size="2" color="red"  /> </center>
+				<img src="LogoTI.jpeg"</span> 	<hr width="100%" size="2" color="red"  /> </center>
 				
 				
 				<h1> <font face="tahoma"><font size="4" color="#1e90ff "> <center> ╠ESCALA DE PLANTÃO TI - BELÉM╣ <br> <font color="white " size="2" face="tahoma"> COORD_TI_BELÉM:NILTON SAHABO | Ref:MAIO/2024 - SEMANA: 04</h1> <hr width="100%" size="2" color="red"  /> 
