--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
  <style>
 body {
-  background-image: url('images/hap3.png');
+  background-image: url('hap3.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
